<resources>
    <string name="app_name">Beber_lembrete</string>
    <string name="hint_peso">Seu peso(Kg)</string>
    <string name="hint_idade">Sua Idade</string>
    <string name="text_button_calcular">Calcular Ingestão Diária</string>
    <string name="text_button_lembrete">Lembrete</string>
    <string name="text_button_alarme">Alarme</string>
    <string name="text_hora">00</string>
    <string name="text_dois_pontos">:</string>
    <string name="text_minutos">00</string>
    <string name="toast_informe_peso">Informe seu peso!</string>
    <string name="toast_informe_idade">Informe sua idade!</string>
    <string name="dialog_title">Redefinir dados</string>
    <string name="dialog_descri">Deseja excluir todos os dados existentes?</string>
    <string name="time_alarme_mensagem">Hora de beber agua</string>

</resources>