<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/container_Header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/bebaagua"
        app:layout_constraintTop_toTopOf="@id/container_Header"
        app:layout_constraintStart_toStartOf="@id/container_Header"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <ImageView
        android:id="@+id/ic_redefinir"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_refresh"
        app:layout_constraintTop_toTopOf="@id/container_Header"
        app:layout_constraintEnd_toEndOf="@id/container_Header"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"/>
    
    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_peso"
        android:textColorHint="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/container_Header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:padding="15dp"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:gravity="center"
        />


    <EditText
        android:id="@+id/edit_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_idade"
        android:textColorHint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_Header"
        app:layout_constraintStart_toEndOf="@id/edit_peso"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="number"
        android:maxLength="3"
        android:gravity="center"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/text_button_calcular"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@drawable/bg_degrade_button"
        app:layout_constraintTop_toBottomOf="@id/edit_peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/resultado_ml"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/container_resultado_ml"
        app:layout_constraintTop_toBottomOf="@id/bt_calcular"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <TextView
        android:id="@+id/txt_resultado_ml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="35sp"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/resultado_ml"
        app:layout_constraintStart_toStartOf="@id/resultado_ml"
        app:layout_constraintEnd_toEndOf="@id/resultado_ml"
        app:layout_constraintBottom_toBottomOf="@id/resultado_ml"/>
    <Button
        android:id="@+id/bt_defirnir_lembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/resultado_ml"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/text_button_lembrete"/>

    <Button
        android:id="@+id/bt_alarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/resultado_ml"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_button_alarme"/>

    <TextView
    android:id="@+id/txt_hora"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="168dp"
    android:text="@string/text_hora"
    android:textColor="@color/black"
    android:textSize="35sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/bt_defirnir_lembrete"
    />

    <TextView
        android:id="@+id/txt_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dois_pontos"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_hora"
        app:layout_constraintTop_toBottomOf="@+id/bt_alarme"
         />
    <TextView
        android:id="@+id/txt_minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_minutos"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_dois_pontos"
        app:layout_constraintTop_toBottomOf="@+id/bt_alarme"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>